orbit controls added and model default position fixed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>My first three.js app</title>
-		<link rel="stylesheet" href="style.css">		
-	</head>
-	<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>My first three.js app</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    
+    <div id="three-container"></div>
+    <!-- <main>
+      
+      <div class="pokemon">
+		<p class="pokemon-id-back">#025</p>        
 		<div id="three-container"></div>
+	
+        <div id="pokemon-info">
+          <div class="nombre-contenedor">
+			<p class="pokemon-id">#025</p>
+			<h2 class="pokemon-nombre">Pikachu</h2>          
+          </div>
+        </div>
+        <div class="pokemon-tipos">
+          <p class="electric tipo">ELECTRIC</p>
+          <p class="fighting tipo">FIGHTING</p>
+        </div>
 
-		<script type="module" src="main.js"></script>
-	</body>
+        <div class="pokemon-stats">
+          <p class="stat">4m</p>
+          <p class="stat">60kg</p>
+        </div>
+      </div>
+    </main> -->
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
